<resources>
    <string name="app_name">ChatTo</string>
    <string name="online_users">Çevrimiçi</string>
    <string name="all_users">Tüm Kullanıcılar</string>
    <string name="fav_list_text">Favori Kişiler</string>
    <string name="login">Giriş</string>
    <string name="username">Kullanıcı adı</string>
    <string name="password">Şifre</string>
    <string name="login_text">Giriş</string>
    <string name="click_to_register">Kayıt olmak için tıklayın</string>
    <string name="register_text">Kayıt</string>
    <string name="register">Kayıt Ol</string>
    <string name="click_to_login">Giriş ekranına dönmek için tıklayın</string>
    <string name="no_users">Kullanıcı bulunamadı</string>
    <string name="write_a_message">Mesaj girin</string>
    <string name="sign_out">Çıkış</string>
    <string name="all_users_text">Çevrimdışı kullanıcılar</string>
    <string name="fav_text">favoriye al</string>

</resources>
